--- a/jeje.html
+++ b/jeje.html
@@ -6,21 +6,16 @@
 
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 
-<meta property="al:ios:url" content="pluslaanonima.page.link" /> 
-
-<meta property="al:ios:app_store_id" content="1489954011" />
-
-<meta property="al:ios:app_name" content="com.SAIEP.LAPlus" />
-
-<meta property="al:android:url" content="pluslaanonima.page.link" /> 
-
-<meta property="al:android:app_name" content=".LAApplication" />
-
+<meta property="al:android:url" content="pluslaanonima.page.link://Home" /> 
+	
 <meta property="al:android:package" content="com.mobilenik.laanonimaplus" />
 
-<meta property="al:web:should_fallback" content= "false" />
+<meta property="al:android:app_name" content=".LAApplication" />
+	
+<meta property="og:title" content="Prueba Nerds"/>
+	
+<meta property="og:type"  content="website"/>	
 
-<meta property="og:url"                content="pluslaanonima.page.link" />
 <style>
 <!--
  /* Font Definitions */
