--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 
-<meta property="al:android:url" content="https://pluslaanonima.page.link/ONBTLA" /> 
+<meta property="al:android:url" content="https://pluslaanonima.page.link/Home" /> 
 	
 <meta property="al:android:package" content="com.mobilenik.laanonimaplus" />
 
