--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="Tarjeta La Anónima">
     <meta property="og:description" content="Ahora podés obtener tu Tarjeta La Anónima desde la App Plus La Anónima">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.laanonima.com.ar/quieromitarjeta/">
+    <meta property="og:url" content="https://pluslaanonima.page.link/ONBTLA">
     <meta property="og:image" content="">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
