--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <meta property="og:title" content="Tarjeta La Anónima - Quiero Mi Tarjeta">
     <meta property="og:site_name" content="Tarjeta La Anónima">
     <meta property="og:description" content="Ahora podés obtener tu Tarjeta La Anónima desde la App Plus La Anónima">
+    
+    <meta property="al:android:url" content="pluslaanonima.page.link" /> 
+
+    <meta property="al:android:app_name" content=".LAApplication" />
+
+    <meta property="al:android:package" content="com.mobilenik.laanonimaplus" />
+    
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pluslaanonima.page.link/ONBTLA">
     <meta property="og:image" content="">
