--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="Tarjeta La Anónima">
     <meta property="og:description" content="Ahora podés obtener tu Tarjeta La Anónima desde la App Plus La Anónima">
     
-    <meta property="al:android:url" content="https://pluslaanonima.page.link/ONBTLA" /> 
+    <meta property="al:android:url" content="pluslaanonima.page.link/ONBTLA" /> 
 
     <meta property="al:android:app_name" content=".LAApplication" />
 
