--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
     <meta property="al:android:package" content="com.mobilenik.laanonimaplus" />
     
-    <meta property="og:title" content="Tarjeta La Anónima - Quiero Mi Tarjeta">
-    <meta property="og:site_name" content="Tarjeta La Anónima">
-    <meta property="og:description" content="Ahora podés obtener tu Tarjeta La Anónima desde la App Plus La Anónima">
+    <meta property="al:web:url" content="http://pluslaanonima.page.link/Home" />
     
     <meta property="og:type" content="website">
 
