--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarjeta La Anónima - Quiero Mi Tarjeta</title>
 
-    <meta property="al:android:url" content="pluslaanonima.page.link/Home" /> 
+    <meta property="al:android:url" content="www.laanonima.com.ar/quieromitarjeta/" /> 
 
     <meta property="al:android:app_name" content=".LAApplication" />
 
     <meta property="al:android:package" content="com.mobilenik.laanonimaplus" />
-    
-    <meta property="al:web:url" content="http://pluslaanonima.page.link/Home" />
     
     <meta property="og:type" content="website">
 
