--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarjeta La Anónima - Quiero Mi Tarjeta</title>
+    
+    <meta property="al:ios:url" content="https://pluslaanonima.page.link/Home" /> 
+
+    <meta property="al:ios:app_name" content="com.SAIEP.LAPlus" />
 
     <meta property="al:android:url" content="https://pluslaanonima.page.link/Home" /> 
 
