--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h1><img src="images/saca_tu_tarjeta.png" alt="Sacá tu Tarjeta La Anónima" class="img-fluid"></h1>
 
                 <p class="mt-4 d-lg-none">
-                    <a href="https://pluslaanonima.page.link/ONBTLA" target="_blank" class="me-4"><img src="images/cta_saca_tu_tarjeta_magenta.png" alt="Ingresá" class="img-fluid mb-3"></a>
+                    <a href="https://pluslaanonima.page.link/Home" target="_blank" class="me-4"><img src="images/cta_saca_tu_tarjeta_magenta.png" alt="Ingresá" class="img-fluid mb-3"></a>
                 </p>
                 <p class="mt-4">
                     <a href="https://tarjeta.la/googleplay" target="_blank" class="me-4"><img src="images/btn_googleplay.png" alt="Google Play" class="img-fluid mb-3"></a>
