--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarjeta La Anónima - Quiero Mi Tarjeta</title>
     
-   <meta property="al:ios:url" content="applinks:pluslaanonima.page.link/ONBTLA" /> 
+   <meta property="al:ios:url" content="applinks:pluslaanonima.page.link" /> 
 
     <meta property="al:ios:app_store_id" content="1489954011" />
 
