--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta property="al:ios:app_name" content="com.SAIEP.LAPlus" />
 
-    <meta property="al:android:url" content="http://pluslaanonima.page.link/Home" /> 
+    <meta property="al:android:url" content="https://pluslaanonima.page.link/Home" /> 
 
     <meta property="al:android:app_name" content=".LAApplication" />
 
