--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta property="al:android:app_name" content=".LAApplication" />
 
     <meta property="al:android:package" content="com.mobilenik.laanonimaplus" />
+    
+    <meta property="al:web:url"    content="https://pluslaanonima.page.link/ONBTLA" />
    
     
    
